deploy/gradientzoo-api-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gradientzoo-api-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: gradientzoo-api
    spec:
      containers:
        - name: gradientzoo-api
          image: gcr.io/gradientzoo-1233/gradientzoo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
