deploy/gradientzoo-postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gradientzoo-postgres-svc
spec:
  type: NodePort
  ports:
  - port: 5432 # the port that this service should serve on
    targetPort: 5432 # the container on each pod to connect to, can be a name (e.g. 'www') or a number (e.g. 80)
    protocol: TCP
  selector:
    app: gradientzoo-postgres
