deploy/gradientzoo-api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gradientzoo-api-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: gradientzoo-api-tls
      hosts:
        - api.gradientzoo.com
  backend:
    serviceName: gradientzoo-api-svc
    servicePort: 8000
  rules:
  - host: api.gradientzoo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gradientzoo-api-svc
          servicePort: 8000
